add initial css

--- a/index.html
+++ b/index.html
@@ -11,21 +11,13 @@
         <h1>Guitar Makers</h1>
     </header>
     <nav>
-        <p>
-            <a href="#mission">Mission</a>
-        </p>
-        <p>           
-            <a href="#products">Products</a>
-        </p>
-        <p>
-            <a href="#team">Team</a>
-        </p>
-        <p>
-            <a href="#shop">Shop</a>
-        </p>
-        <p>
-            <a href="#contact">Contact</a>
-        </p>        
+        <ul>
+            <li><a href="#mission">Mission</a></li>                  
+            <li><a href="#products">Products</a></li>        
+            <li><a href="#team">Team</a></li>        
+            <li><a href="#shop">Shop</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>        
     </nav>
     <main>
         <!-- Mission -->
