improved header and mission section

--- a/index.html
+++ b/index.html
@@ -4,26 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guitar Makers</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Guitar Makers</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#mission">Mission</a></li>                  
-            <li><a href="#products">Products</a></li>        
-            <li><a href="#team">Team</a></li>        
-            <li><a href="#shop">Shop</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>        
-    </nav>
+        <div class="logo-container">
+            <h2 class="logo">🎸 Guitar Makers</h2>
+        </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#mission" class="nav-link">Mission</a></li>                  
+                <li><a href="#products" class="nav-link">Products</a></li>        
+                <li><a href="#team" class="nav-link">Team</a></li>        
+                <li><a href="#shop" class="nav-link">Shop</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>        
+        </nav>
+    </header>    
     <main>
         <!-- Mission -->
         <section id="mission">
             <div class="content">
-                <h2>Guitar Makers</h2>
+                <h2>🎸 Guitar Makers 🎸</h2>
                 <h4>Building beautiful player-grade guitars with responsibly-harvested wood</h4>
             </div>
         </section>
