init js: testing events and DOM manipulation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Guitar Makers</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">    
 </head>
 <body>
     <header>
@@ -117,5 +117,6 @@
     <footer>
         <div>copyright &copy;  Guitar Makers 2021</div>
     </footer>
+    <script type="text/javascript" src="./main.js" async></script>
 </body>
 </html>
